# cse-2022

./: README.md
ChaiseRoulante/: CodesCan.md  platformio.ini
ChaiseRoulante/src/: CANMESSAGES.h  main copy.cpp  main.cpp
Simulation Python/: RepereAxe.drawio  Simulation.ipynb
catkin_ws/launch/: all.launch
catkin_ws/src/canopen/: CMakeLists.txt  package.xml
catkin_ws/src/canopen/include/: canopenClass.h
catkin_ws/src/canopen/src/: canopen.cpp  canopenClass.cpp
catkin_ws/src/donkey_llc_CSE_2022/src/: low_level_control.py
catkin_ws/src/ros-i2cpwmboard_CSE_2022/src/: i2cpwm_controller.cpp
doc/: CSE - Cahier des charges.md  CSE - PROJET FAUTEUIL ROULANT TOUT TERRAIN.md  rappord.md
